[metadata]
name = api-gateway-lambda-proxy
version = 0.0.1
description= a tiny library for aws lambda proxy integration in api gateway
long_description = file: README.md
author = Tomohiro Yoshihara
author_email = gexira.halen.toms@gmail.com
url = "https://github.com/nekonoshiri/api-gateway-lambda-proxy"
license_file = LICENSE

[options]
package_dir =
  = src
packages = find:
# install_requires = no dependencies yet

[options.packages.find]
where = src

[flake8]
ignore = D401
exclude =
  .git,
  .pytest-cache,
  __pycache__,
  setup.py

[mypy]
disallow_untyped_defs = True
disallow_untyped_calls = True
